--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 						<li><a href="#about">About</a></li>
 						<li><a href="#services">Services</a></li>
 						<li><a href="#team">Team</a></li>
-						<li><a href="record.htm">Record</a></li>
+						<li><a href="record.html">Record</a></li>
 
 						<li><a href="#contact">Contact</a></li>
 					</ul>
