--- a/record.html
+++ b/record.html
@@ -63,11 +63,11 @@
 
 				<nav class="nav-menu d-none d-lg-block">
 					<ul>
-						<li><a href="index.htm">Home</a></li>
-						<li><a href="index.htm">About</a></li>
-						<li><a href="index.htm">Services</a></li>
-						<li><a href="index.htm">Team</a></li>
-						<li class="active"><a href="record.htm">Records</a></li>
+						<li><a href="index.html">Home</a></li>
+						<li><a href="index.html">About</a></li>
+						<li><a href="index.html">Services</a></li>
+						<li><a href="index.html">Team</a></li>
+						<li class="active"><a href="record.html">Records</a></li>
 
 						<li><a href="#contact">Contact</a></li>
 					</ul>
