--- a/index.html
+++ b/index.html
@@ -70,10 +70,9 @@
 				<h2>
 					We are team of Social Volunteer from NEUB
 				</h2>
-<<<<<<< HEAD
+				<<<<<<< HEAD
 				<!-- <a href="#about" class="btn-get-started scrollto">Get Started</a> -->
-=======
->>>>>>> 3e9d6df (final touch)
+				======= >>>>>>> 3e9d6df (final touch)
 			</div>
 		</section>
 		<!-- End Hero -->
@@ -81,9 +80,6 @@
 		<main id="main">
 			<!-- ======= About Section ======= -->
 			<section id="about" class="about">
-<<<<<<< HEAD
-			
-=======
 				<div class="section-title about-title">
 					<h2>About</h2>
 					<h3><span>About Us</span></h3>
@@ -102,8 +98,6 @@
 						and humanitarian values ​​and various welfare schemes. Basically a
 						non-political voluntary organization for the welfare of the people.
 					</p>
->>>>>>> 3e9d6df (final touch)
-
 				</div>
 			</section>
 			<!-- End About Section -->
@@ -125,11 +119,12 @@
 						>
 							<div class="icon-box">
 								<div class="icon"><i class="bx bx-donate-blood"></i></div>
-<<<<<<< HEAD
+
 								<h4 class="title">Blood Donation</h4>
 								<p class="description">
 									We manage blood for Humanity.
-=======
+								</p>
+
 								<h4 class="title">
 									Blood <br />
 									Donation
@@ -139,7 +134,6 @@
 									<br />
 									“Bring a life back to power. Make blood donation your
 									responsibility”
->>>>>>> 3e9d6df (final touch)
 								</p>
 							</div>
 						</div>
@@ -201,12 +195,7 @@
 						<h2>Team</h2>
 						<h3>Our Hardworking <span>Team</span></h3>
 						<p>
-<<<<<<< HEAD
-							Ut possimus qui ut temporibus culpa velit eveniet modi omnis est
-							adipisci expedita at voluptas atque vitae autem.
-=======
 							Executive Committee (2021-2022)
->>>>>>> 3e9d6df (final touch)
 						</p>
 					</div>
 
@@ -220,12 +209,8 @@
 										Md. Nasir Uddin
 									</h3>
 									<p class="position">
-<<<<<<< HEAD
-										Advisor
-=======
 										Advisor <br />
 										(2021-2022)
->>>>>>> 3e9d6df (final touch)
 									</p>
 								</div>
 							</div>
@@ -244,12 +229,8 @@
 										Akteruzzaman Suhed
 									</h3>
 									<p class="position">
-<<<<<<< HEAD
-										President
-=======
 										President <br />
 										(2021-2022)
->>>>>>> 3e9d6df (final touch)
 									</p>
 								</div>
 							</div>
@@ -268,12 +249,8 @@
 										Sajib Sutradhar
 									</h3>
 									<p class="position">
-<<<<<<< HEAD
-										Vice President
-=======
 										Vice President<br />
 										(2021-2022)
->>>>>>> 3e9d6df (final touch)
 									</p>
 								</div>
 							</div>
@@ -292,12 +269,8 @@
 										Md.Didarul Islam
 									</h3>
 									<p class="position">
-<<<<<<< HEAD
-										General Secretary
-=======
 										General Secretary<br />
 										(2021-2022)
->>>>>>> 3e9d6df (final touch)
 									</p>
 								</div>
 							</div>
@@ -316,12 +289,8 @@
 										Hridoy Kumar Das
 									</h3>
 									<p class="position">
-<<<<<<< HEAD
-										Assistant General Secretary
-=======
 										Assistant General Secretary<br />
 										(2021-2022)
->>>>>>> 3e9d6df (final touch)
 									</p>
 								</div>
 							</div>
@@ -340,39 +309,13 @@
 										Samad Ahmed
 									</h3>
 									<p class="position">
-<<<<<<< HEAD
-										Organizing Secretary
-=======
 										Organizing Secretary<br />
 										(2021-2022)
->>>>>>> 3e9d6df (final touch)
 									</p>
 								</div>
 							</div>
 						</div>
 
-<<<<<<< HEAD
-						<!-- <div class="team-container">
-							<div class="team-header">
-								<img
-									src="./assets/img/team/tasbir.png"
-									class="img-fluid"
-									alt=""
-								/>
-
-								<div class="member-data">
-									<h3 class="name">
-										Tasbir Ahmed Chowdhury
-									</h3>
-									<p class="position">
-										Treasurer
-									</p>
-								</div>
-							</div>
-						</div> -->
-
-=======
->>>>>>> 3e9d6df (final touch)
 						<div class="team-container">
 							<div class="team-header">
 								<img
@@ -386,12 +329,8 @@
 										Nuzhat Tabassum Nishi
 									</h3>
 									<p class="position">
-<<<<<<< HEAD
-										Co-Organizing Secretary
-=======
 										Co-Organizing Secretary<br />
 										(2021-2022)
->>>>>>> 3e9d6df (final touch)
 									</p>
 								</div>
 							</div>
@@ -410,12 +349,8 @@
 										Tasbir Ahmed Chowdhury
 									</h3>
 									<p class="position">
-<<<<<<< HEAD
-										Treasurer
-=======
 										Treasurer<br />
 										(2021-2022)
->>>>>>> 3e9d6df (final touch)
 									</p>
 								</div>
 							</div>
@@ -434,12 +369,8 @@
 										Aminul Islam
 									</h3>
 									<p class="position">
-<<<<<<< HEAD
-										Joint Treasurer
-=======
 										Joint Treasurer<br />
 										(2021-2022)
->>>>>>> 3e9d6df (final touch)
 									</p>
 								</div>
 							</div>
@@ -458,12 +389,8 @@
 										Shahed Ahmed
 									</h3>
 									<p class="position">
-<<<<<<< HEAD
-										Publicity Secretary - 1
-=======
 										Publicity Secretary - 1<br />
 										(2021-2022)
->>>>>>> 3e9d6df (final touch)
 									</p>
 								</div>
 							</div>
@@ -482,12 +409,8 @@
 										Mazed Ahmed Sami
 									</h3>
 									<p class="position">
-<<<<<<< HEAD
-										Publicity Secretary - 2
-=======
 										Publicity Secretary - 2<br />
 										(2021-2022)
->>>>>>> 3e9d6df (final touch)
 									</p>
 								</div>
 							</div>
@@ -506,12 +429,8 @@
 										Muntakim Mubin Emon
 									</h3>
 									<p class="position">
-<<<<<<< HEAD
-										Communication Secretary
-=======
 										Communication Secretary<br />
 										(2021-2022)
->>>>>>> 3e9d6df (final touch)
 									</p>
 								</div>
 							</div>
@@ -530,12 +449,8 @@
 										Mahid Ahmed Farhan
 									</h3>
 									<p class="position">
-<<<<<<< HEAD
-										Executive Member
-=======
 										Executive Member<br />
 										(2021-2022)
->>>>>>> 3e9d6df (final touch)
 									</p>
 								</div>
 							</div>
@@ -554,12 +469,8 @@
 										Atika Labiba
 									</h3>
 									<p class="position">
-<<<<<<< HEAD
-										Executive Member
-=======
 										Executive Member<br />
 										(2021-2022)
->>>>>>> 3e9d6df (final touch)
 									</p>
 								</div>
 							</div>
@@ -578,12 +489,8 @@
 										Nasima Akter Roksana
 									</h3>
 									<p class="position">
-<<<<<<< HEAD
-										Executive Member
-=======
 										Executive Member<br />
 										(2021-2022)
->>>>>>> 3e9d6df (final touch)
 									</p>
 								</div>
 							</div>
@@ -602,12 +509,8 @@
 										Syeda Sayma Begum
 									</h3>
 									<p class="position">
-<<<<<<< HEAD
-										Executive Member
-=======
 										Executive Member<br />
 										(2021-2022)
->>>>>>> 3e9d6df (final touch)
 									</p>
 								</div>
 							</div>
@@ -623,21 +526,10 @@
 					<div class="section-title">
 						<h2>Contact</h2>
 						<h3>Contact <span>Us</span></h3>
-<<<<<<< HEAD
-						<p>
-							Ut possimus qui ut temporibus culpa velit eveniet modi omnis est
-							adipisci expedita at voluptas atque vitae autem.
-						</p>
-					</div>
-
-					<div class="row mt-5">
-						<div class="col-lg-4">
-=======
 					</div>
 
 					<div class="row mt-5">
 						<div class="col-lg-6">
->>>>>>> 3e9d6df (final touch)
 							<div class="info">
 								<div class="address">
 									<i class="icofont-google-map"></i>
@@ -651,90 +543,13 @@
 								<div class="email">
 									<i class="icofont-envelope"></i>
 									<h4>Email:</h4>
-<<<<<<< HEAD
-									<p>info@example.com</p>
-=======
+
 									<p>neubsocialserviceclub@gmail.com</p>
->>>>>>> 3e9d6df (final touch)
 								</div>
 
 								<div class="phone">
 									<i class="icofont-phone"></i>
 									<h4>Call:</h4>
-<<<<<<< HEAD
-									<p>+1 5589 55488 55s</p>
-								</div>
-							</div>
-						</div>
-
-						<div class="col-lg-8 mt-5 mt-lg-0">
-							<form
-								action="forms/contact.php"
-								method="post"
-								role="form"
-								class="php-email-form"
-							>
-								<div class="form-row">
-									<div class="col-md-6 form-group">
-										<input
-											type="text"
-											name="name"
-											class="form-control"
-											id="name"
-											placeholder="Your Name"
-											data-rule="minlen:4"
-											data-msg="Please enter at least 4 chars"
-										/>
-										<div class="validate"></div>
-									</div>
-									<div class="col-md-6 form-group">
-										<input
-											type="email"
-											class="form-control"
-											name="email"
-											id="email"
-											placeholder="Your Email"
-											data-rule="email"
-											data-msg="Please enter a valid email"
-										/>
-										<div class="validate"></div>
-									</div>
-								</div>
-								<div class="form-group">
-									<input
-										type="text"
-										class="form-control"
-										name="subject"
-										id="subject"
-										placeholder="Subject"
-										data-rule="minlen:4"
-										data-msg="Please enter at least 8 chars of subject"
-									/>
-									<div class="validate"></div>
-								</div>
-								<div class="form-group">
-									<textarea
-										class="form-control"
-										name="message"
-										rows="5"
-										data-rule="required"
-										data-msg="Please write something for us"
-										placeholder="Message"
-									></textarea>
-									<div class="validate"></div>
-								</div>
-								<div class="mb-3">
-									<div class="loading">Loading</div>
-									<div class="error-message"></div>
-									<div class="sent-message">
-										Your message has been sent. Thank you!
-									</div>
-								</div>
-								<div class="text-center">
-									<button type="submit">Send Message</button>
-								</div>
-							</form>
-=======
 									<p>+8801735708642</p>
 								</div>
 							</div>
@@ -755,7 +570,6 @@
 									</a>
 								</div>
 							</div>
->>>>>>> 3e9d6df (final touch)
 						</div>
 					</div>
 				</div>
@@ -775,13 +589,9 @@
 							<p>
 								Sheikhghat-Kazirbazar Road, Sylhet<br />
 								Bangladesh <br /><br />
-<<<<<<< HEAD
-								<strong>Phone:</strong> +1 2345 56788 55<br />
-								<strong>Email:</strong> info@example.com<br />
-=======
+
 								<strong>Phone:</strong> +8801735708642<br />
 								<strong>Email:</strong> neubsocialserviceclub@gmail.com<br />
->>>>>>> 3e9d6df (final touch)
 							</p>
 						</div>
 
@@ -789,15 +599,6 @@
 							<h4>Useful Links</h4>
 							<ul>
 								<li>
-<<<<<<< HEAD
-									<i class="bx bx-chevron-right"></i> <a href="#">Home</a>
-								</li>
-								<li>
-									<i class="bx bx-chevron-right"></i> <a href="#">About us</a>
-								</li>
-								<li>
-									<i class="bx bx-chevron-right"></i> <a href="#">Services</a>
-=======
 									<i class="bx bx-chevron-right"></i>
 									<a href="#home">Home</a>
 								</li>
@@ -808,7 +609,6 @@
 								<li>
 									<i class="bx bx-chevron-right"></i>
 									<a href="#services">Services</a>
->>>>>>> 3e9d6df (final touch)
 								</li>
 							</ul>
 						</div>
@@ -828,34 +628,8 @@
 									<i class="bx bx-chevron-right"></i>
 									<a href="#">Work is our passion</a>
 								</li>
-<<<<<<< HEAD
-								<!-- <li>
-									<i class="bx bx-chevron-right"></i> <a href="#">Marketing</a>
-								</li>
-								<li>
-									<i class="bx bx-chevron-right"></i>
-									<a href="#">Graphic Design</a>
-								</li> -->
 							</ul>
 						</div>
-
-						<!-- <div class="col-lg-4 col-md-6 footer-newsletter">
-							<h4>Join Our Newsletter</h4>
-							<p>
-								Tamen quem nulla quae legam multos aute sint culpa legam noster
-								magna
-							</p>
-							<form action="" method="post">
-								<input type="email" name="email" /><input
-									type="submit"
-									value="Subscribe"
-								/>
-							</form>
-						</div> -->
-=======
-							</ul>
-						</div>
->>>>>>> 3e9d6df (final touch)
 					</div>
 				</div>
 			</div>
@@ -863,11 +637,7 @@
 			<div class="container d-md-flex py-4">
 				<div class="mr-md-auto text-center text-md-left">
 					<div class="copyright">
-<<<<<<< HEAD
-						&copy; Copyright <strong><span>Jony</span></strong
-=======
 						<strong><span>NEUB SSC</span></strong
->>>>>>> 3e9d6df (final touch)
 						>. All Rights Reserved
 					</div>
 				</div>
