--- a/record.html
+++ b/record.html
@@ -255,6 +255,43 @@
 					</div>
 				</div>
 			</section>
+
+			<!--         Blood Donation         -->
+			<section class="blood-donation">
+				<div class="container">
+					<div class="section-title">
+						<h2>
+							<div class="icon"><i class="bx bx-donate-blood"></i></div>
+						</h2>
+						<h3>
+							Blood
+							<span>
+								Donation
+							</span>
+						</h3>
+						<p>
+							“Bring a life back to power. Make blood donation your
+							responsibility”
+						</p>
+					</div>
+					<div class="row">
+						<div class="col-md-6">
+							<img
+								src="./assets/img/blood donate/1.png"
+								class="img-fluid"
+								alt=""
+							/>
+						</div>
+						<div class="col-md-6">
+							<img
+								src="./assets/img/blood donate/2.png"
+								class="img-fluid"
+								alt=""
+							/>
+						</div>
+					</div>
+				</div>
+			</section>
 		</main>
 
 		<!-- End #main -->
