--- a/record.html
+++ b/record.html
@@ -61,8 +61,6 @@
 						><img src="./assets/img/neub logo.png" alt=""
 					/></a>
 				</h1>
-				<!-- Uncomment below if you prefer to use an image logo -->
-				<!-- <a href="index.html" class="logo mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
 				<nav class="nav-menu d-none d-lg-block">
 					<ul>
@@ -87,7 +85,8 @@
 						<h2>Chairman</h2>
 						<h3>Receive our honorable <span>Chairman</span></h3>
 						<p>
-							Receiving ou honorable chairman MR.......
+							Receiving our honorable chairman Professor Dr.Md. Elias Uddin
+							Biswas
 						</p>
 					</div>
 
@@ -152,7 +151,7 @@
 
 						<div class="im-1">
 							<img
-								src="./assets/img/relief-goods/2.png"
+								src="./assets/img/relief-goods/3.png"
 								class="img-fluid"
 								alt=""
 							/>
