--- a/record.html
+++ b/record.html
@@ -90,8 +90,8 @@
 						</p>
 					</div>
 
-					<div class="owl-carousel owl-theme chairman-carousel">
-						<div class="chairman-image-1">
+					<div class="row">
+						<div class="col-md-4 pt-5">
 							<div class="chairman-1">
 								<img
 									src="./assets/img/recieve our chairman/chairman-1.png"
@@ -101,8 +101,8 @@
 							</div>
 						</div>
 
-						<div class="chairman-image-1">
-							<div class="chairman-2">
+						<div class="col-md-4 col-sm-12 pt-5">
+							<div class="chairman-1">
 								<img
 									src="./assets/img/recieve our chairman/chairman-2.png"
 									alt="chairman-1"
@@ -111,8 +111,8 @@
 							</div>
 						</div>
 
-						<div class="chairman-image-1">
-							<div class="chairman-3">
+						<div class="col-md-4 col-sm-12 pt-5">
+							<div class="chairman-1">
 								<img
 									src="./assets/img/recieve our chairman/chairman-3.png"
 									alt="chairman-1"
@@ -140,75 +140,73 @@
 						</p>
 					</div>
 
-					<div class="owl-carousel owl-theme relief-sel">
-						<div class="im-1">
+					<div class="row">
+						<div class="col-md-4">
 							<img
 								src="./assets/img/relief-goods/1.png"
-								class="img-fluid"
+								class="rounded img-fluid"
 								alt=""
 							/>
 						</div>
-
-						<div class="im-1">
+						<div class="col-md-4 pt-3">
+							<img
+								src="./assets/img/relief-goods/2.png"
+								class="rounded img-fluid"
+								alt=""
+							/>
+						</div>
+						<div class="col-md-4 pt-3">
 							<img
 								src="./assets/img/relief-goods/3.png"
-								class="img-fluid"
+								class="rounded img-fluid"
 								alt=""
 							/>
 						</div>
+					</div>
 
-						<div class="im-1">
-							<img
-								src="./assets/img/relief-goods/3.png"
-								class="img-fluid"
-								alt=""
-							/>
-						</div>
-
-						<div class="im-1">
+					<div class="row pt-3">
+						<div class="col-md-4 pt-3">
 							<img
 								src="./assets/img/relief-goods/4.png"
-								class="img-fluid"
+								class="rounded img-fluid"
 								alt=""
 							/>
 						</div>
-
-						<div class="im-5">
+						<div class="col-md-4 pt-3">
 							<img
 								src="./assets/img/relief-goods/5.png"
-								class="img-fluid"
+								class="rounded img-fluid"
 								alt=""
 							/>
 						</div>
-
-						<div class="im-5">
+						<div class="col-md-4 pt-3">
 							<img
 								src="./assets/img/relief-goods/6.png"
-								class="img-fluid"
+								class="rounded img-fluid"
 								alt=""
 							/>
 						</div>
+					</div>
 
-						<div class="im-5">
+					<div class="row pt-3">
+						<div class="col-md-4 pt-3">
 							<img
 								src="./assets/img/relief-goods/7.png"
-								class="img-fluid"
+								class="rounded img-fluid"
 								alt=""
 							/>
 						</div>
-
-						<div class="im-5">
+						<div class="col-md-4 pt-3">
 							<img
 								src="./assets/img/relief-goods/8.png"
-								class="img-fluid"
+								class="rounded img-fluid"
 								alt=""
 							/>
 						</div>
-
-						<div class="im-5">
+						<div class="col-md-4 pt-3">
 							<img
 								src="./assets/img/relief-goods/9.png"
-								class="img-fluid"
+								class="rounded img-fluid"
 								alt=""
 							/>
 						</div>
@@ -230,28 +228,30 @@
 						</p>
 					</div>
 
-					<div class="owl-carousel owl-theme dental-care">
-						<div class="image-1">
+					<div class="row">
+						<div class="col-sm-4">
 							<img src="./assets/img/dental/1.png" class="img-fluid" alt="" />
 						</div>
 
-						<div class="image-1">
-							<img src="./assets/img/dental/2.png" class="img-fluid alt="" />
+						<div class="col-sm-4 pt-3">
+							<img src="./assets/img/dental/2.png" class="img-fluid" alt="" />
 						</div>
 
-						<div class="image-1">
+						<div class="col-sm-4 pt-3">
 							<img src="./assets/img/dental/3.png" class="img-fluid" alt="" />
 						</div>
+					</div>
 
-						<div class="image-1">
+					<div class="row">
+						<div class="col-sm-4 pt-3">
 							<img src="./assets/img/dental/4.png" class="img-fluid" alt="" />
 						</div>
 
-						<div class="image-1">
+						<div class="col-sm-4 pt-3">
 							<img src="./assets/img/dental/5.png" class="img-fluid" alt="" />
 						</div>
 
-						<div class="image-1">
+						<div class="col-sm-4 pt-3">
 							<img src="./assets/img/dental/6.png" class="img-fluid" alt="" />
 						</div>
 					</div>
@@ -277,14 +277,14 @@
 						</p>
 					</div>
 					<div class="row">
-						<div class="col-md-6">
+						<div class="col-lg-6">
 							<img
 								src="./assets/img/blood donate/1.png"
 								class="img-fluid"
 								alt=""
 							/>
 						</div>
-						<div class="col-md-6">
+						<div class="col-lg-6">
 							<img
 								src="./assets/img/blood donate/2.png"
 								class="img-fluid"
