--- a/index.html
+++ b/index.html
@@ -633,7 +633,11 @@
 					</div>
 				</div>
 				<div class="social-links text-center text-md-right pt-3 pt-md-0">
-					<a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
+					<a
+						href="https://www.facebook.com/groups/1546551258922988/?ref=share"
+						class="facebook"
+						><i class="bx bxl-facebook"></i
+					></a>
 				</div>
 			</div>
 		</footer>
