--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		<header id="header" class="fixed-top">
 			<div class="container d-flex align-items-center">
 				<a href="" class="logo mr-auto"
-					><img src="./assets/img/neub logo.png" alt=""
+					><img src="./assets/img/neub logo2.png" alt=""
 				/></a>
 				<!-- Uncomment below if you prefer to use an image logo -->
 				<!-- <a href="index.html" class="logo mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
@@ -576,7 +576,7 @@
 					<div class="row">
 						<div class="col-lg-4 col-md-6 footer-contact">
 							<!-- <h3>Tempo</h3> -->
-							<img src="./assets/img/neub logo.png" alt="" class="ft-logo" />
+							<img src="./assets/img/neub logo2.png" alt="" class="ft-logo" />
 							<p>
 								Sheikhghat-Kazirbazar Road, Sylhet<br />
 								Bangladesh <br /><br />
