--- a/record.html
+++ b/record.html
@@ -29,28 +29,14 @@
 			href="./assets/vendor/boxicons/css/boxicons.min.css"
 			rel="stylesheet"
 		/>
-		<link href="./assets/vendor/remixicon/remixicon.css" rel="stylesheet" />
-		<link href="./assets/vendor/venobox/venobox.css" rel="stylesheet" />
-		<link
-			href="./assets/vendor/owl.carousel/assets/owl.carousel.min.css"
-			rel="stylesheet"
-		/>
+		
 
-		<link
-			rel="stylesheet"
-			href="./assets/vendor/owl.carousel/assets/owl.theme.default.min.css"
-		/>
+		
 
 		<!-- Template Main CSS File -->
 		<link href="./assets/css/style.css" rel="stylesheet" />
 
 		<!-- =======================================================
-  * Template Name: Tempo - v2.2.1
-  * Template URL: https://bootstrapmade.com/tempo-free-onepage-bootstrap-theme/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
-	</head>
 
 	<body>
 		<!-- ======= Header ======= -->
@@ -58,7 +44,7 @@
 			<div class="container d-flex align-items-center">
 				<h1 class="logo mr-auto">
 					<a href="index.html"
-						><img src="./assets/img/neub logo.png" alt=""
+						><img src="./assets/img/neub logo2.png" alt=""
 					/></a>
 				</h1>
 
@@ -305,7 +291,7 @@
 					<div class="row">
 						<div class="col-lg-4 col-md-6 footer-contact">
 							<!-- <h3>Tempo</h3> -->
-							<img src="./assets/img/neub logo.png" alt="" class="ft-logo" />
+							<img src="./assets/img/neub logo2.png" alt="" class="ft-logo" />
 							<p>
 								Sheikhghat-Kazirbazar Road, Sylhet<br />
 								Bangladesh <br /><br />
@@ -344,29 +330,8 @@
 									<i class="bx bx-chevron-right"></i>
 									<a href="#">Work is our passion</a>
 								</li>
-								<!-- <li>
-									<i class="bx bx-chevron-right"></i> <a href="#">Marketing</a>
-								</li>
-								<li>
-									<i class="bx bx-chevron-right"></i>
-									<a href="#">Graphic Design</a>
-								</li> -->
 							</ul>
 						</div>
-
-						<!-- <div class="col-lg-4 col-md-6 footer-newsletter">
-							<h4>Join Our Newsletter</h4>
-							<p>
-								Tamen quem nulla quae legam multos aute sint culpa legam noster
-								magna
-							</p>
-							<form action="" method="post">
-								<input type="email" name="email" /><input
-									type="submit"
-									value="Subscribe"
-								/>
-							</form>
-						</div> -->
 					</div>
 				</div>
 			</div>
@@ -379,11 +344,6 @@
 					</div>
 				</div>
 				<div class="social-links text-center text-md-right pt-3 pt-md-0">
-					<a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-					<a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-					<a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-					<a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-					<a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
 				</div>
 			</div>
 		</footer>
@@ -395,10 +355,6 @@
 		<script src="assets/vendor/jquery/jquery.min.js"></script>
 		<script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 		<script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>
-		<script src="assets/vendor/php-email-form/validate.js"></script>
-		<script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-		<script src="assets/vendor/venobox/venobox.min.js"></script>
-		<script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
 
 		<!-- Template Main JS File -->
 		<script src="./assets/js/record.js"></script>
