bug fixing final stage

--- a/index.html
+++ b/index.html
@@ -506,6 +506,26 @@
 								</div>
 							</div>
 						</div>
+
+						<div class="team-container">
+							<div class="team-header">
+								<img
+									src="./assets/img/team/mehrin.png"
+									class="img-fluid"
+									alt=""
+								/>
+
+								<div class="member-data">
+									<h3 class="name">
+										Meherin Akter
+									</h3>
+									<p class="position">
+										Executive Member<br />
+										(2021-2022)
+									</p>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</section>
