--- a/record.html
+++ b/record.html
@@ -68,10 +68,10 @@
 			<section id="chairman" class="chairman">
 				<div class="container">
 					<div class="section-title">
-						<h2>Chairman</h2>
-						<h3>Receive our honorable <span>Chairman</span></h3>
+						<h2>Vice Chancellor</h2>
+						<h3>Receive our honorable <span>Vice Chancellor</span></h3>
 						<p>
-							Receiving our honorable chairman Professor Dr.Md. Elias Uddin
+							Receiving our honorable chancellor Professor Dr.Md. Elias Uddin
 							Biswas
 						</p>
 					</div>
@@ -357,6 +357,6 @@
 		<script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>
 
 		<!-- Template Main JS File -->
-		<script src="./assets/js/record.js"></script>
+		<script src="./assets/js/main.js"></script>
 	</body>
 </html>
