--- a/index.html
+++ b/index.html
@@ -199,10 +199,7 @@
 									<h3 class="name">
 										Md. Nasir Uddin
 									</h3>
-									<p class="position">
-										Advisor <br />
-										(2021-2022)
-									</p>
+									<p class="position">Advisor <br /></p>
 								</div>
 							</div>
 						</div>
@@ -457,7 +454,7 @@
 
 								<div class="member-data">
 									<h3 class="name">
-										Atika Labiba
+										Atkia Labiba
 									</h3>
 									<p class="position">
 										Executive Member<br />
@@ -539,33 +536,35 @@
 						<h3>Contact <span>Us</span></h3>
 					</div>
 
-					<div class="row mt-5">
-						<div class="col-lg-6">
-							<div class="info">
-								<div class="address">
-									<i class="icofont-google-map"></i>
-									<h4>Location:</h4>
-									<p>
-										Sheikhghat-Kazirbazar Road, Sylhet<br />
-										Bangladesh <br />
-									</p>
-								</div>
-
-								<div class="email">
-									<i class="icofont-envelope"></i>
-									<h4>Email:</h4>
-
-									<p>neubsocialserviceclub@gmail.com</p>
-								</div>
-
-								<div class="phone">
-									<i class="icofont-phone"></i>
-									<h4>Call:</h4>
-									<p>+8801735708642</p>
-								</div>
+					<div class="row mt-5 ml-5">
+						<div class="col-lg-4 col-md-4">
+							<div class="address info pt-4">
+								<i class="icofont-google-map"></i>
+								<h4>Location:</h4>
+								<p>
+									Sheikhghat-Kazirbazar Road, Sylhet<br />
+									Bangladesh <br />
+								</p>
 							</div>
 						</div>
-						<div class="col-md-6">
+						<div class="col-lg-4 col-md-4">
+							<div class="email info pt-4">
+								<i class="icofont-envelope"></i>
+								<h4>Email:</h4>
+
+								<p>neubsocialserviceclub@gmail.com</p>
+							</div>
+						</div>
+						<div class="col-lg-4 col-md-4">
+							<div class="phone info pt-4">
+								<i class="icofont-phone"></i>
+								<h4>Call:</h4>
+								<p>+8801735708642</p>
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-lg-12">
 							<div class="join-us">
 								<div class="section-title">
 									<h3>Join <span>Us</span></h3>
