--- a/record.html
+++ b/record.html
@@ -270,12 +270,47 @@
 								alt=""
 							/>
 						</div>
-						<div class="col-lg-6">
+						<div class="col-lg-6 pt-5">
 							<img
 								src="./assets/img/blood donate/2.png"
 								class="img-fluid"
 								alt=""
 							/>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<!-- Provide Winter Clothing -->
+			<section class="winter-clothing">
+				<div class="container">
+					<div class="section-title">
+						<h2>
+							<div class="icon"><i class='bx bx-closet'></i></div>
+						</h2>
+						<h3>
+							Provide 
+							<span>
+								Winter Clothing
+							</span>
+						</h3>
+						<p>
+							“The best way to not feel hopeless is to get up and do something. Don’t wait for good things to happen to you. If you go out and make some good things happen, you will fill the world with hope, you will fill yourself with hope.”
+						</p>
+					</div>
+
+					<div class="row">
+						<div class="col-md-3 pt-5">
+							<img src="./assets/img/provide winter cloth/1.png" class="img-fluid" alt="">
+						</div>
+						<div class="col-md-3 pt-5">
+							<img src="./assets/img/provide winter cloth/2.png" class="img-fluid" alt="">
+						</div>
+						<div class="col-md-3 pt-5">
+							<img src="./assets/img/provide winter cloth/3.png" class="img-fluid" alt="">
+						</div>
+						<div class="col-md-3 pt-5">
+							<img src="./assets/img/provide winter cloth/4.png" class="img-fluid" alt="">
 						</div>
 					</div>
 				</div>
@@ -348,7 +383,6 @@
 			</div>
 		</footer>
 		<!-- End Footer -->
-
 		<a href="#" class="back-to-top"><i class="ri-arrow-up-line"></i></a>
 
 		<!-- Vendor JS Files -->
